tooling/nargo_cli/tests/compile_failure/die_div_by_zero/src/main.nr
use dep::std;

fn main() {
    let x: u32 = 1 / 0;
}